Update method section

--- a/doc/sections/Method.tex
+++ b/doc/sections/Method.tex
@@ -1,6 +1,6 @@
 \subsection{Reinforcement learning}
 
-Reinforcement learning (RL) framework was developed to explore and optimize the mapping of operations to SE in an unsupervised 
+We present a Reinforcement learning (RL) based framework to explore and optimize the mapping of instructions to SE in an unsupervised 
 manner. 
 Proximal Policy Optimization (PPO) trains a neural network model to place operations into the SE tiles based on a reward 
 function that models the SE device and its constraints. 
