Add Overview in methods

--- a/doc/sample-sigplan.tex
+++ b/doc/sample-sigplan.tex
@@ -24,6 +24,7 @@
 %% The first command in your LaTeX source must be the \documentclass command.
 \documentclass[sigplan,screen]{acmart}
 \usepackage{todonotes}
+\usepackage{xcolor}
 %% NOTE that a single column version is required for 
 %% submission and peer review. This can be done by changing
 %% the \doucmentclass[...]{acmart} in this template to 
