--- a/doc/sections/Introduction.tex
+++ b/doc/sections/Introduction.tex
@@ -57,7 +57,7 @@ This process also adds assumptions that reduce the search space, trading off opt
 In this work we propose a Deep Reinforcement Learning (RL) method to explore and find optimal mappings in an unsupervised manner. 
 Using the Proximal Policy Optimization (PPO) method we train a neural network model to place instructions onto the SE tiles guided by a reward function that models the SE device and its constraints. 
 The trained model was able to create valid mappings for the SE by learning about the problem domain. 
-By using a learning methodology, we are able to reuse what the neural network learned to obtain mappings for computation graphs that were not seen during training.  
+\todo{This is future work}\textcolor{red}{By using a learning methodology, we are able to reuse what the neural network learned to obtain mappings for computation graphs that were not seen during training.}  
 
 
 The key contributions of this paper are as follows.
