--- a/doc/sections/se.tex
+++ b/doc/sections/se.tex
@@ -101,5 +101,5 @@ The SE hardware imposes constraints that the RL mapper must adhere to in order t
 \end{enumerate}
 The SE device configuration and its constraints are modeled in a simulation environment and the reward function.
 In order to enforce these constraints, we explore two methods: the first method is to give a negative reward when a 
-constraint is violated and the second is creation of a mask on the invalid actions so that the network only output valid actions.
+constraint is violated and the second is creation of a mask on the invalid actions so that the network only outputs valid actions.
 In both cases, placing instructions sub-optimally leads to a reduced reward whereas placements that optimally reduce total execution time of the graph are rewarded. 
