--- a/doc/sections/Method.tex
+++ b/doc/sections/Method.tex
@@ -1,21 +1,23 @@
 \subsection{Reinforcement learning}
 
-We present a Reinforcement learning (RL) based framework to explore and optimize the mapping of instructions to SE in an unsupervised 
-manner. 
-Proximal Policy Optimization (PPO) trains a neural network model to place operations into the SE tiles based on a reward 
-function that models the SE device and its constraints. 
-The SE mapping task is formulated as a discrete action problem. 
-In PPO, samples of state, reward and action are collected by running inference on the latest copy of actor model and getting the outcome from the SE reward function. 
-These samples are stored in a buffer that will be used as data to train the models. 
-The state is a concatenation of an array of placed nodes, a selected node to be placed next and an embedding of the whole computation graph. 
-An action is a tile location and a II count. 
-The reward is the number of cycles taken to execute all nodes. 
-After each action, a node is placed and its state, action, reward is saved as sample. 
-The buffer can choose to keep or discard certain number unsuccessful placements samples to balance number of successful and unsuccessful samples for the training phase. 
-After sampling, the actor model is trained to produce actions from the sample states and the critic model is trained to match the sampled rewards from the actions produced by the actor using a surrogate loss function. 
-This sample and train process is repeated over various iterations. 
-Figure \ref{fig:ppo} shows a diagram of the sample and training phase. 
-After node placements, routing info and configurations for programming each tile are saved for final output.
+We present a Reinforcement learning (RL) based framework to explore and optimize the mapping of instructions to SE in an unsupervised manner, guided by a reward function that informs the mapping algorithm about the quality of the mapping at each step. 
+
+\subsection{Overview}
+Proximal Policy Optimization (PPO) is an RL method widely used for continuous and discrete action problems. It trains actor and critic models (represented as a neural networks). 
+The actor model outputs actions (node placements) given an observation of the current state of the SE. The critic model is trained to predict the expected reward given an action in the current state. 
+Our SE mapping task is formulated as a discrete action problem where samples of SE state, actions performed, and rewards obtained at each time step are collected after executing the actions provided by the actor model in simulation. These samples are stored in a buffer that is used as data to train the models. 
+The key components of our RL method are as follows:
+\begin{itemize}
+  \item States: In our case, the state is represented by a concatenation of an array of features of placed nodes, a selected node to be placed next and an embedding of the whole computation graph. 
+  \item Action: The action at each step is a tuple \((N,T,I)\) where $N$ is the node to be placed and $T$ and $I$ are the tile and initiation interval at which the node $N$ is to be placed.
+  \item Reward function: The reward obtained is based on the number of cycles tak-en to execute all nodes.
+  \item Transition function: The transition function gives the probability distribution over next states given the current state and the action to be performed.
+\end{itemize}
+
+
+ The actor model is trained to produce actions from sample states obtained during simulation and the critic model is trained to match the sampled rewards from the actions produced by the actor using a surrogate loss function. This sample and train process is repeated over various iterations. In this manner, the problem search space is explored using the reward function as a heuristic.
+Figure \ref{fig:ppo} shows the overall RL framework. 
+\textcolor{red}{After node placements, routing info and configurations for programming each tile are saved for final output.}
 
 \begin{figure}[h]
   \centering
@@ -23,6 +25,9 @@ After node placements, routing info and configurations for programming each tile
   \caption{Diagram of the RL framework showing the role of actor and critic networks during RL training. }
   \label{fig:ppo}
 \end{figure}
+
+\subsection{Environment Design}
+
 \subsection{Model design}
 
 The actor and critic models architecture is shown in figure \ref{fig:model}. 
