--- a/doc/sample-sigplan.tex
+++ b/doc/sample-sigplan.tex
@@ -25,6 +25,8 @@
 \documentclass[sigplan,screen]{acmart}
 \usepackage{todonotes}
 \usepackage{xcolor}
+\usepackage{amsmath}
+\usepackage{bm}
 %% NOTE that a single column version is required for 
 %% submission and peer review. This can be done by changing
 %% the \doucmentclass[...]{acmart} in this template to 
