--- a/doc/sections/Related_work.tex
+++ b/doc/sections/Related_work.tex
@@ -7,21 +7,29 @@ SE also provides asynchronous messaging as a first-class programming construct a
 A key challenge with SE applications is efficient compilation of high-level language code (for example, in C/C++) to executable program. 
 Research compilers targeting CGRAs are available (for example, \cite{adriaansen2016code, chin2017cgra, mei2003exploiting, prabhakar2018plasticine}) but they are limited in quality and code coverage. 
 Industry-strength compilers such as Clang/LLVM do not provide official support for CGRA-like architectures.
+
+ChordMap, a mapper that maps synchronous data-flows to a CGRA was introduced in \cite{li_chordmap_2022}.
+ChordMap is based on modulo-scheduling to provides a spatio-temporal mapping.
+The mapper targets a classic $4\times4$ CGRA.
+The proposed method partitions the SDF and the CGRA, and maps the kernel instances within each partition ina spatio-temporal fashion.
+
+
+
 \subsection{Reinforcement Learning}
-Reinforcement Learning (RL) is widely used to tackle unsupervised optimization problems. It has been applied in chip placement \cite{mirhoseini2020chip}, 
-workload distribution \cite{Mirhoseini_placementRNN, addanki2019placeto, zhou2019gdp}, compiler optimizations \cite{Zhou_compileGNN} and 
-other decision based tasks \cite{kormushev2013reinforcement, ZophL16_NASRL}. Alternative optimization algorithms includes 
-evolutionary strategies \cite{Zhichao_ESNAS} and bayesian optimization \cite{shi2020learned}. An advantage of RL approach is learning from 
-a collection of programs and reuse previous data for new programs by training a Deep Learning model \cite{zhou2019gdp}.
+Reinforcement Learning (RL) is widely used to tackle unsupervised optimization problems.
+It has been applied in chip placement \cite{mirhoseini2020chip}, workload distribution \cite{Mirhoseini_placementRNN, addanki2019placeto, zhou2019gdp}, compiler optimizations \cite{Zhou_compileGNN} and other decision based tasks \cite{kormushev2013reinforcement, ZophL16_NASRL}. 
+Alternative optimization algorithms includes evolutionary strategies \cite{Zhichao_ESNAS} and bayesian optimization \cite{shi2020learned}. 
+An advantage of RL approach is learning from a collection of programs and reuse previous data for new programs by training a Deep Learning model \cite{zhou2019gdp}.
 
 Recurrent neural networks (RNN) \cite{hochreiter1996lstm} were popular approach to process sequence of nodes from a graph representation. 
 Graph neural networks (GNN) \cite{gori2005new} showed success in processing structured data without preprocessing required for RNNs.
 GNNs are widely used task involves processing graphs \cite{Zhou_compileGNN, zhou2019gdp}. 
-In addition, attention modules are used to 
-supplement the embeddings created by GNNs to further improve results \cite{addanki2019placeto}.
+In addition, attention modules are used to supplement the embeddings created by GNNs to further improve results \cite{addanki2019placeto}.
 
-In \cite{mirhoseini2020chip}, a RL method for chip placement is presented. A graph neural network to create embedding from a netlist graph and passed through an actor model via PPO. 
-The produced output is the whole chip placement. Their actor is composed of deconvolution layers which are more computationally intensive. 
+In \cite{mirhoseini2020chip}, a RL method for chip placement is presented. 
+A graph neural network to create embedding from a netlist graph and passed through an actor model via PPO. 
+The produced output is the whole chip placement. 
+Their actor is composed of deconvolution layers which are more computationally intensive. 
 \cite{zhou2019gdp} presents a combination of graph neural network and transformer-XL model to place operations on devices. 
 
 In our case, the input is a combination of computation graph, SE device state and node to be placed. 
