--- a/doc/sections/Abstract.tex
+++ b/doc/sections/Abstract.tex
@@ -2,16 +2,16 @@ The Streaming Engine (SE) is a Coarse-Grained Reconfigurable Array developed by 
 Technology.
 The SE provides programming flexibility and high-performance with energy efficiency.
 %A program is broken down into a set of one or more Synchronous Data-Flows (SDFs).
-A program is represented as a computation graph, where every instruction a node.
-Each node need to be mapped to the right slot and array in the SE to ensure the correct execution of the program.
+A program is represented as a computation graph, where every instruction is a node.
+Each node needs to be mapped to the right slot and array in the SE to ensure the correct execution of the program.
 This creates an optimization problem with a vast and sparse search space.
 A manual mapping of the graph takes an infeasible amount of time by the programmer.
-such manual mapping is impractical because it requires an expertise and knowledge in the SE micro-architecture and reduces the search-space, thus, trading off optimization possibilities.
-In this work we propose an AI-based mapper to explore mappings and optimize them in an unsupervised manner using reinforcement learning framework.
-This provides an automated method that can produce programs quickly and searches for optimal mappings without programmers interference. 
+Such manual mapping is impractical because it requires expertise and knowledge in the SE micro-architecture and reduces the search-space, thus, trading off optimization possibilities.
+In this work we propose a Reinforcement Learning(RL) based mapper to explore mappings and optimize them in an unsupervised manner using a reinforcement learning framework.
+This provides us an automated method that can produce mappings for programs quickly and searches for optimal mappings without programmers interference. 
 This tool also improves the usability of the SE device by encapsulating device configuration details.
-Proximal Policy Optimization (PPO) training a model to place operations into the SE tiles based on a reward function that models the SE device and its constraints.
+We use Proximal Policy Optimization (PPO) in order to train a model which places operations into the SE tiles based on a reward function that models the SE device and its constraints.
 Graph neural networks are added to create embeddings to represent the computation graph.
 A transformer block is used to model sequential operation placement mode. 
-The trained model was able to create valid mappings for SE.
-The implemented method is compared against evolutionary search and baseline.
+We show results on how certain workloads are mapped to the SE.
+% The implemented method is compared against evolutionary search and baseline.
