--- a/doc/sections/Introduction.tex
+++ b/doc/sections/Introduction.tex
@@ -57,26 +57,22 @@ This process also adds assumptions that reduce the search space, trading off opt
 In this work we propose a Deep Reinforcement Learning (RL) method to explore and find optimal mappings in an unsupervised manner. 
 Using the Proximal Policy Optimization (PPO) method we train a neural network model to place instructions onto the SE tiles guided by a reward function that models the SE device and its constraints. 
 The trained model was able to create valid mappings for the SE by learning about the problem domain. 
-\todo{This is future work}\textcolor{red}{By using a learning methodology, we are able to reuse what the neural network learned to obtain mappings for computation graphs that were not seen during training.}  
 
 
-The key contributions of this paper are as follows.
+The key contributions of this paper are as follows:
 \begin{enumerate}
-    \item contribution 1
-    \item contribution 2
-    \item ... etc.
+    \item A Reinforcement Learning methodology that is able to map the instructions for a given compute graph to the processing elements in our Streaming Engine CGRA and has the potential to be reused across computation graphs.
+    \item An analysis of different factors that impacts the quality of mappings obtained.
 \end{enumerate}
 
-
-This work is motivated to provide improved tools set that lowers SE usability barrier.
-This also assist other tools or programmers in SE mapping creation by providing placement suggestions or tile configuration labels.
+This work is motivated to provide an improved toolset that lowers SE usability barrier.
+This will also assist other tools or programmers in SE mapping creation by providing placement suggestions or tile configuration labels.
 The RL mapper performs unsupervised learning and optimization allowing it to search a wide and sparse search space. 
 Each operation is an instruction that is mapped to a specific slot on a tile.
-
-This line of research is inspired by recent work that used RL for chip placement.
+This line of research is inspired by recent work that used RL for chip placement \cite{mirhoseini2020chip}.
 Our problem requirement of mapping nodes of a computation graph to available compute elements is similar to the problem of placing nodes of a chip netlist on a chip canvas. 
-
 
 The rest of this paper is organized as follows: Section \ref{sec:background} provides the necessary background on the SE device architecture.
 Section \ref{sec:rlmapper} presents the proposed RL approach for mapping applications to the SE.
-Finally, Section \ref{sec:relatedwork} discusses related work and Section \ref{sec:conclusion} provides conclusions and future work.
+Section \ref{sec:relatedwork} discusses related work.
+Section \ref{sec:results} discusses results and finally, Section \ref{sec:conclusion} concludes the paper along with a discussion on future work.
