--- a/doc/sections/Conclusion.tex
+++ b/doc/sections/Conclusion.tex
@@ -5,7 +5,8 @@ It also reduces the manual labor required to find mappings.
 The techniques presented could be applied to other applications such as chip placement, which is worth trying in future work. 
 Our future work also includes: 
 \begin{itemize}
-\item Optimizing training methods to obtain mappings for problems like IFFT which have a bigger search space than currently used computation graphs. 
-\item Increasing sample efficiency of learning methods and improving the simulation environment for the SE by adding more constraints. 
-\item Integration of RL mapper into the SE toolset 
+    \item Optimizing training methods to obtain mappings for problems like IFFT which have a bigger search space than currently used computation graphs. 
+    \item Increasing sample efficiency of learning methods and improving the simulation environment for the SE by adding more constraints. 
+    \item Studying the impact of reusing the trained networks across graph rather than training a network from scratch for a given computation graph.
+    \item Integration of RL mapper into the SE toolset 
 \end{itemize}
