cited mapping is np hard problem paper
Signed-off-by: BASHAR ROMANOUS <basharromano@micron.com>

--- a/doc/sample-base.bib
+++ b/doc/sample-base.bib
@@ -568,3 +568,19 @@ Publisher: Association for Computing Machinery},
 	pages = {2201--2219},
 	file = {Zhao et al. - 2020 - Towards Higher Performance and Robust Compilation .pdf:C\:\\Users\\basharromano\\Zotero\\storage\\93HXV6CS\\Zhao et al. - 2020 - Towards Higher Performance and Robust Compilation .pdf:application/pdf},
 }
+
+@InProceedings{10.1007/3-540-69346-7_30,
+author="Uma, R. N.
+and Wein, Joel",
+editor="Bixby, Robert E.
+and Boyd, E. Andrew
+and R{\'i}os-Mercado, Roger Z.",
+title="On the Relationship Between Combinatorial and LP-Based Approaches to NP-Hard Scheduling Problems",
+booktitle="Integer Programming and Combinatorial Optimization",
+year="1998",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="394--408",
+abstract="Enumerative approaches, such as branch-and-bound, to solv- ing optimization problems require a subroutine that produces a lower bound on the value of the optimal solution. In the domain of scheduling problems the requisite lower bound has typically been derived from either the solution to a linear-programming relaxation of the problem or the solution of a combinatorial relaxation. In this paper we investigate, from both a theoretical and practical perspective, the relationship between several linear-programming based lower bounds and combinatorial lower bounds for two scheduling problems in which the goal is to minimize the average weighted completion time of the jobs scheduled.",
+isbn="978-3-540-69346-8"
+}
